--- a/world-bank-app/src/App.css
+++ b/world-bank-app/src/App.css
@@ -36,3 +36,24 @@
     transform: rotate(360deg);
   }
 }
+
+.results-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.rendered-data {
+  margin-bottom: 50px;
+}
+
+.graph-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.graph-container > h5 {
+  margin-left: auto;
+  margin-right: 10px;
+}
