--- a/world-bank-app/src/App.css
+++ b/world-bank-app/src/App.css
@@ -57,3 +57,17 @@
   margin-left: auto;
   margin-right: 10px;
 }
+
+/* CSS for Results Page */
+#results {
+  background: black;
+}
+
+.results-title {
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.results-content {
+  font-family: Arial, Helvetica, sans-serif;
+}
