styling and logo

--- a/world-bank-app/src/App.css
+++ b/world-bank-app/src/App.css
@@ -101,6 +101,13 @@ h5 {
   align-content: stretch;
   padding-bottom: 30px;
 }
+
+.login-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+}
 /* CSS for Register Page */
 
 .password-label,
