--- a/world-bank-app/src/App.css
+++ b/world-bank-app/src/App.css
@@ -32,6 +32,9 @@
   }
 }
 body {
+  background-image: url("map.png");
+  background-size: cover;
+  background-repeat: no-repeat;
   background-color: darkcyan;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -42,6 +45,7 @@ body {
   flex-wrap: wrap;
   height: 100%;
   width: 100%;
+  background-color: white;
 }
 /* CSS for Results Page */
 .rendered-data {
@@ -60,6 +64,7 @@ body {
 }
 
 .results-title {
+  background-color: white;
   display: flex;
   justify-content: center;
   font-weight: bold;
@@ -77,7 +82,8 @@ body {
   justify-content: center;
 }
 
-h5 {
+h5,
+h4 {
   font-weight: bold;
 }
 
@@ -91,7 +97,7 @@ h5 {
 }
 /* CSS for Login Page */
 .spacing {
-  background: #fff;
+  background: lightblue;
   padding: 1rem 3rem 1rem;
   width: 1200px;
   margin: 2rem auto;
